Downgrade a few release asserts to diagnostic asserts on beta.
Categories
(Core :: CSS Parsing and Computation, defect)
Tracking
()
People
(Reporter: emilio, Assigned: emilio)
References
Details
Attachments
(1 file)
|
47 bytes,
text/x-phabricator-request
|
pascalc
:
approval-mozilla-beta+
|
Details | Review |
The only case where we know that this assert breaks is in nsIconChannel, which is not exposed to content.
So it doesn't seem to be easy to potentially exploit it, and the crashes in release may be a bit excessive.
| Assignee | ||
Comment 1•7 years ago
|
||
The only case where we know that this assert breaks right now is in
nsIconChannel.
nsIconChannel is used for moz-icon://, which is not exposed to content.
So it doesn't seem to be easy to potentially get into a broken state that
content could exploit, and thus crashes in release may be a bit excessive.
Downgrade the assertion for now.
| Assignee | ||
Comment 2•7 years ago
|
||
Comment on attachment 9059586 [details]
Bug 1545842 - Downgrade RestyleManager assertions to DIAGNOSTIC_ASSERT in beta. r=tnikkel
Beta/Release Uplift Approval Request
- User impact if declined: Crashes (bug 1530190).
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: No
- Needs manual test from QE?: No
- If yes, steps to reproduce: We have no particular STR for bug 1530190.
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): Just downgrades an assertion so as to not crash on release.
- String changes made/needed: none
Comment 3•7 years ago
|
||
Comment on attachment 9059586 [details]
Bug 1545842 - Downgrade RestyleManager assertions to DIAGNOSTIC_ASSERT in beta. r=tnikkel
Downgrading of an assertion to not crash in release, uplift approved for 67 beta 13, thanks.
Comment 4•7 years ago
|
||
| bugherder uplift | ||
| Assignee | ||
Updated•7 years ago
|
Comment 5•6 years ago
|
||
Emilio, given that bug 1530190 landed for 69, should we land the (safer?) patch here for 68?
| Assignee | ||
Comment 6•6 years ago
|
||
Yes, should I re-request beta-uplift here?
Comment 8•6 years ago
|
||
Bit confusing because this already has beta approval from the 67 cycle, so I'll use the whiteboard. Sheriffs, please consider this a=jcristau for beta 68.
Comment 9•6 years ago
|
||
| bugherder uplift | ||
Updated•6 years ago
|
Description
•