Bug 1545842 - Downgrade RestyleManager assertions to DIAGNOSTIC_ASSERT in beta. r=tnikkel a=jcristau

The only case where we know that this assert breaks right now is in
nsIconChannel.

nsIconChannel is used for moz-icon://, which is not exposed to content.

So it doesn't seem to be easy to potentially get into a broken state that
content could exploit, and thus crashes in release may be a bit excessive.

Downgrade the assertion for now.

Differential Revision: https://phabricator.services.mozilla.com//D28248